Adds default styles

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <i class="ph-bold ph-moon"></i>
       </button>
 
-      <section id="timer">
+      <section id="timer" class="flex">
         <span id="minutes">25</span>
         <span>:</span>
         <span id="seconds">00</span>
       </section>
 
-      <section id="controls">
+      <section id="controls" class="flex">
         <button><i class="ph ph-play-circle"></i></button>
         <button><i class="ph ph-pause-circle"></i></button>
         <button><i class="ph ph-timer"></i></button>
