Adds first styles

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   </head>
   <body>
     <div id="app">
-      <button id="toggle-mode">
+      <!-- <button id="toggle-mode">
         <i class="ph-bold ph-sun"></i>
         <i class="ph-bold ph-moon"></i>
-      </button>
+      </button> -->
 
       <section id="timer" class="flex">
         <span id="minutes">25</span>
@@ -25,9 +25,9 @@
       <section id="controls" class="flex">
         <button><i class="ph ph-play-circle"></i></button>
         <button><i class="ph ph-pause-circle"></i></button>
-        <button><i class="ph ph-timer"></i></button>
-        <button><i class="ph ph-stop-circle"></i></button>
-        <button><i class="ph ph-speaker-none"></i></button>
+        <button><i class="ph ph-timer secondary"></i></button>
+        <button><i class="ph ph-stop-circle secondary"></i></button>
+        <button><i class="ph ph-speaker-none secondary"></i></button>
         <button><i class="ph ph-speaker-high"></i></button>
       </section>
     </div>
