Creates sr-only class to improve accessibility

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <div id="app">
       <button id="toggle-mode">
+        <span class="sr-only">Habilitar ou desabilitar modo claro</span>
         <i class="ph-bold ph-sun"></i>
         <i class="ph-bold ph-moon"></i>
       </button>
@@ -22,12 +23,30 @@
       </section>
 
       <section id="controls" class="flex">
-        <button><i class="ph ph-play-circle"></i></button>
-        <button><i class="ph ph-pause-circle"></i></button>
-        <button><i class="ph ph-timer secondary"></i></button>
-        <button><i class="ph ph-stop-circle secondary"></i></button>
-        <button><i class="ph ph-speaker-none secondary"></i></button>
-        <button><i class="ph ph-speaker-high"></i></button>
+        <button>
+          <span class="sr-only">Iniciar contador</span>
+          <i class="ph ph-play-circle"></i>
+        </button>
+        <button>
+          <span class="sr-only">Pausar contador</span>
+          <i class="ph ph-pause-circle"></i>
+        </button>
+        <button>
+          <span class="sr-only">Ajustar contador</span>
+          <i class="ph ph-timer secondary"></i>
+        </button>
+        <button>
+          <span class="sr-only">Reiniciar contador</span>
+          <i class="ph ph-stop-circle secondary"></i>
+        </button>
+        <button>
+          <span class="sr-only">Iniciar música</span>
+          <i class="ph ph-speaker-none secondary"></i>
+        </button>
+        <button>
+          <span class="sr-only">Parar música</span>
+          <i class="ph ph-speaker-high"></i>
+        </button>
       </section>
     </div>
   </body>
