Implements toggle to change theme

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Focus Timer</title>
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="/js/main.js" defer></script>
     <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-svg" />
+    <script type="module" src="/js/main.js" defer></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
   <body>
     <div id="app">
       <button id="toggle-mode">
-        <span class="sr-only">Habilitar ou desabilitar modo claro</span>
+        <span class="sr-only">Ativar light mode</span>
         <i class="ph-bold ph-sun"></i>
         <i class="ph-bold ph-moon"></i>
       </button>
