Adds icon class to buttons

--- a/index.html
+++ b/index.html
@@ -23,29 +23,23 @@
       </section>
 
       <section id="controls" class="flex">
-        <button>
+        <button class="ph ph-play-circle">
           <span class="sr-only">Iniciar contador</span>
-          <i class="ph ph-play-circle"></i>
         </button>
-        <button>
+        <button class="ph ph-pause-circle">
           <span class="sr-only">Pausar contador</span>
-          <i class="ph ph-pause-circle"></i>
         </button>
-        <button>
+        <button class="ph ph-timer secondary">
           <span class="sr-only">Ajustar contador</span>
-          <i class="ph ph-timer secondary"></i>
         </button>
-        <button>
+        <button class="ph ph-stop-circle secondary">
           <span class="sr-only">Reiniciar contador</span>
-          <i class="ph ph-stop-circle secondary"></i>
         </button>
-        <button>
+        <button class="ph ph-speaker-none secondary">
           <span class="sr-only">Iniciar música</span>
-          <i class="ph ph-speaker-none secondary"></i>
         </button>
-        <button>
+        <button class="ph ph-speaker-high">
           <span class="sr-only">Parar música</span>
-          <i class="ph ph-speaker-high"></i>
         </button>
       </section>
     </div>
